fix(question): eliminate N+1 queries when fetching question groups with questions and options